--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -7,16 +7,22 @@
 4+^h|*PROC Release 1.?.?*
 
 |[[latest_issue]]1.3.0
-|{spec_tickets}/SPECPROC-xx[SPECPROC-xx^]. Improve diagrams and explanation on Task wait states and Events; +
+|{spec_tickets}/SPECPROC-19[SPECPROC-19^]. Refine model of concurrency in `TASK_GROUP`
+|T Beale
+|[[latest_issue_date]]18 Mar 2019
+
+|
+|{spec_tickets}/SPECPROC-18[SPECPROC-18^]. Support custom actions for callback receipt of events; +
+ Improve diagrams and explanation on Task wait states and Events; +
  Add `EVENT_ACTION._custom_actions_`; +
  Add `REMINDER._repeats_`; +
  Add `TASK_WAIT._next_state_`
 |T Beale, +
  B Naess
-|[[latest_issue_date]]11 Mar 2019
+|11 Mar 2019
 
 |
-|{spec_tickets}/SPECPROC-xx[SPECPROC-xx^]. Improve model of capture and review data-sets. +
+|{spec_tickets}/SPECPROC-17[SPECPROC-17^]. Specialise `DATASET_SPEC` into Capture and Review forms. +
  {spec_tickets}/SPECPROC-16[SPECPROC-16^]. Change `WORK_PLAN._top_level_plans_` and `LINKED_PLAN._target_` to direct links.
 |M Kejžar, +
  B Naess, +
