--- a/docs/task_planning/master06-model_definition.adoc
+++ b/docs/task_planning/master06-model_definition.adoc
@@ -90,22 +90,24 @@ The parallel Task Group represents a different degree of complexity, since it en
 .Parallel Task Group
 image::{diagrams_uri}/task_group_parallel.svg[id=task_group_parallel, align="center", width=25%]
 
-The type of split and join (i.e. AND, OR, XOR, or other) depends on additional rules for concurrent processing, represented by the attribute `_concurrency_mode_`, whose possible values define the type of split and join, as shown below. The concurrency mode is important because it tells the execution engine at runtime under what conditions to consider the group has completed. The XOR and AND cases are trivial to determine, however the OR case is more complicated. It might initially seem as if the Group may be considered completed when the first path completes (i.e. 'quickest path wins'). However, an alternative reasonable approach is to wait for all paths that were commenced to complete. Both possibilities are catered for.
+The type of split and join (i.e. AND, OR, XOR, or other) depends on additional rules for concurrent processing, represented by the attribute `_concurrency_mode_`, whose possible values define the type of split and join, as shown below. The concurrency mode is important because it tells the execution engine at runtime under what conditions to consider the group has completed. The AND cases is the simplest, since there is no conditional processing - all paths must be followed. The XOR case represents a 1/N choice, so completion is also trivial to determine. However the OR case is more complicated. It might initially seem as if the Group may be considered completed when the first path completes (i.e. 'quickest path wins'). However, an alternative reasonable approach is to wait for all paths that were commenced to complete. Both possibilities are catered for.
 
-[cols="1,1,3", options="header"]
+[cols="1,1,1,3", options="header"]
 |===
-|Concurrency mode   |Split/join logic   |Semantics
+|Concurrency mode    |Split/join logic   |Conditionality     |Semantics
 
-|`xor_one_path`      |XOR                |Only one parallel path is followed.
-|`and_all_paths`     |AND                |All parallel paths are followed.
-|`or_first_completed`|OR                 |One or more paths may be commenced, and the Group is complete as soon as one path completes.
-|`or_all_started`    |OR                 |One or more paths may be commenced, and the Group is complete when all paths commenced complete.
+|`and_all_paths`     |AND                |(none)             |All parallel paths are followed.
+|`xor_one_path`      |XOR                |1/N                |Only one parallel path is followed.
+|`or_first_completed`|OR                 |N/M                |One or more paths may be commenced, and the Group is complete as soon as one path completes.
+|`or_all_started`    |OR                 |N/M                |One or more paths may be commenced, and the Group is complete when all paths commenced complete.
 
 |===
+
+The parallel / concurrent semantics attached to the Task Group do not indicate anything about conditional processing, i.e. conditions that might be used to choose outgoing paths from the split point represented by a Task Group in the XOR and OR logic cases. Consequently, the choice of path(s) to follow in the parallel case is determined _by the performer, not the system_. In order to specify conditions on paths, the `TASK_GROUP` the conditional subtypes <<_conditional_structures, described below>> are used.
 
 === Hierarachical Nesting
 
-Task Groups of either type may be mixed in a hierarchical fashion. One structure is such that the overall work of a Task Plan is defined as a sequential Group in which some members are a parallel Group, as shown below.
+Task Groups of sequential and parallel types may be mixed in a hierarchical fashion. One structure is such that the overall work of a Task Plan is defined as a sequential Group in which some members are a parallel Group, as shown below.
 
 [.text-center]
 .Nested Task grouping - sequential structure
@@ -385,7 +387,12 @@ More advanced applications of Task Plans include four conditional structures, wh
 .proc.task_planning package definition model (decision view)
 image::{uml_diagrams_uri}/PROC-task_planning.definition-decision.svg[id=proc_task_planning_definition_decision, align="center"]
 
-The pattern types are based on the design principles described earlier, which distinguished both different conditional structural types, and three different levels of system support, i.e. 'automated', 'decision support' and 'ad hoc'. The combination of structural types and levels of system/user interaction levels is realised in terms of variations on the `CHOICE_GROUP` and `CHOICE_BRANCH` classes shown above, which define a generic notion of a decision point from which multiple branches emanate. The variations in system support manifest as follows.
+The `CHOICE_GROUP` class defines the essential semantics for all conditional structure types, which is that they conform to a parallel, XOR-logic (i.e. single choice) concurrency model, as indicated by the class invariants. In traditional workflow processing, any instance of a `CHOICE_GROUP` is thus an 'XOR gate'.
+
+[.tbd]
+TBD: we can theoretically relax the invariant to allow multiple paths to be chosen - this corresponds to conditional-OR processing in traditional workflow.
+
+The specific sub-types are based on the design principles described earlier, which distinguished both different conditional structural types, and three different levels of system support, i.e. 'automated', 'decision support' and 'ad hoc'. The combination of structural types and levels of system/user interaction levels is realised in terms of variations on the `CHOICE_GROUP` and `CHOICE_BRANCH` classes shown above, which define a generic notion of a decision point from which multiple branches emanate. The variations in system support manifest as follows.
 
 * _fully automated_: three kinds of fully defined decision structures, namely the `CONDITION_XX`, `DECISION_XX` and `EVENT_XX` classes shown in the UML diagram;
 * _decision support_: where instances of the above structures should be considered recommendations only, the `_override_type_` attribute defined on `CHOICE_GROUP` may be used on any `XX_GROUP` to indicate that user override is allowed;
